<resources>
    <string name="app_name">Playground</string>
    <string name="images_feature_title">Search for Images</string>
    <string name="images_feature_desc">This activity allows to user to search for images using some keywords. It queries the Unsplash API for images, and implements pagination allowing the user to scroll continuously to keep querying for more images.</string>
    <string name="news_feature_title">View Breaking News Headlines</string>
    <string name="news_toolbar">Breaking News Headlines</string>
    <string name="news_feature_desc">This activity allows to user to see the recent top headlines in the news and refreshes the data on a swipe-down gesture. It queries the News API for news articles, and caches the results in a database implemented using Room. If the user swipes down, it queries the api for fresh data. </string>
    <string name="photo_filter_feature_title">Work Manager</string>
    <string name="photo_filter_feature_desc">This activity allows the user to see WorkManager in action. The user can select an image from their device, apply the sepia filter to it to give it a brownish tinge, and then save it back to their device as a new image. This is accomplished by the chaining the following 3 tasks together using WorkManager, and running them one after the other: cleaning any previously saved image, applying the sepia filter on the newly selected image, and then saving that new image to the device.</string>
    <string name="photo_filter_feature_list"><b>Features:</b>\nViewModel (MVVM)\nLiveData\nData Binding\nWorkManager</string>
    <string name="images_features_list"><b>Features:</b>\nRxJava\nViewModel\nLiveData\nPagination</string>
    <string name="news_features_list"><b>Features:</b>\nRxJava\nViewModel\nLiveData\nRoom\nData Binding\nSwipeRefreshLayout</string>
    <string name="failed">Failed</string>
    <string name="by_author">by %1$s</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="select_image">Select Image</string>
    <string name="photo_features_title">Upload Photos</string>
    <string name="need_permissions">Need storage read and write permissions</string>
    <string name="sepia_filter">Sepia Filter</string>
</resources>
