<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="presenter"
                type="com.owais.playground.MainActivity" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

            <Button
                    android:id="@+id/pagination_button"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:onClick="@{() -> presenter.openImagesPaginationActivity()}"
                    android:text="@string/images_feature_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/pagination_desc_textview"
                    style="@style/MainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/images_feature_desc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pagination_button" />


            <TextView
                    android:id="@+id/pagination_features_textview"
                    style="@style/MainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/images_features_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pagination_desc_textview" />

            <Button
                    android:id="@+id/room_button"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> presenter.openNewsRoomActivity()}"
                    android:text="@string/news_feature_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pagination_features_textview" />

            <TextView
                    android:id="@+id/room_desc_textview"
                    style="@style/MainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/news_feature_desc"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_button" />

            <TextView
                    android:id="@+id/room_features_textview"
                    style="@style/MainTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/news_features_list"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_desc_textview" />

            <Button
                    android:id="@+id/work_manager_button"
                    style="@style/MainButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginTop="20dp"
                    android:onClick="@{() -> presenter.openWorkManagerActivity()}"
                    android:text="@string/work_manager_title"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/room_features_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>